--- a/MyApp/src/app/component/login/login.component.html
+++ b/MyApp/src/app/component/login/login.component.html
@@ -17,7 +17,7 @@
           </div>
           <div class="validation-errors">
             <ng-container *ngFor="let validation of validation_messages.email">
-              <div class="error-message"
+              <div class="error-message text-danger"
                 *ngIf="formGroup.get('email').hasError(validation.type) && (formGroup.get('email').dirty || formGroup.get('email').touched)">
                 <span name="information-circle-outline"></span> {{ validation.message }}
               </div>
@@ -34,20 +34,28 @@
           </div>
           <div class="validation-errors">
             <ng-container *ngFor="let validation of validation_messages.password">
-              <div class="error-message"
+              <p class="error-message text-danger"
                 *ngIf="formGroup.get('password').hasError(validation.type) && (formGroup.get('password').dirty || formGroup.get('password').touched)">
                 <!-- <div class="error-message"
                    *ngIf="formGroup.get('password').hasError(validation.type) && (formGroup.get('password').minlength || formGroup.get('password').maxlength)"> -->
+
                 <span name="information-circle-outline"></span> {{ validation.message }}
-              </div>
+              </p>
             </ng-container>
           </div>
-          <div>
-    
-            <button class="btn btn-secondary" type="submit" (click)="onSubmit()" id="btn1" [disabled]="!formGroup.valid"><b>Login</b></button>
+
+          <div *ngIf="alert" class="alert alert-warning alert-dismissible fade show">
+            <strong>Warning!</strong> Please enter a valid value in all the required fields before proceeding.
           </div>
 
-          <a class="btn btn-outline-danger" href="#" role="button">Forget Password</a>
+          <div>
+            <button [disabled]="loading" class="btn btn-primary" type="submit" id="btn1" [disabled]="!formGroup.valid">
+              <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+              <b>Login</b>
+            </button>
+          </div>
+
+          <a href="#">Forget Password?</a>
         </form>
       </div>
     </div>
