--- a/MyApp/src/app/app.component.html
+++ b/MyApp/src/app/app.component.html
@@ -1,2 +1,2 @@
- <!-- <app-login></app-login> -->
-<<app-home1></app-home1> 
+  <!--<app-login></app-login> <app-home1></app-home1> 
+ --><!-- <a routerLink="/app-main" routerLinkActive="active">Crisis Center</a> -->  <router-outlet></router-outlet>
