--- a/MyApp/src/app/component/home1/home1.component.css
+++ b/MyApp/src/app/component/home1/home1.component.css
@@ -27,14 +27,45 @@ margin-top: 50px;
   
   .dropdown-content a {
     color: black;
+
     padding: 12px 16px;
     text-decoration: none;
     display: block;
   }
   
-  .dropdown-item a:hover {background-color: rgb(221, 221, 221);}
+  .dropdown-item a:hover {background-color: rgb(177, 29, 29);}
   
   .dropdown:hover .dropdown-content {display: block;}
   
-  .nav-item:hover.nav-item{background-color: #7212f0;}
-  
+  .nav-item:hover.nav-item{background-color: #f10909;}
+  #dropdown04{
+
+
+color:solid white!important;
+  }
+  .navbar-brand{
+    margin-top: 13px !important;
+  }
+  .py-5
+  {
+
+padding-top: 20px !important;
+padding-bottom: 20px !important;
+  }
+  .fas {
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 900 !important;
+    margin-right: 10px !important;
+    font-size: larger;
+  }
+  img{
+    width: 32px !important;
+    height: 32px !important;
+    font-weight: 900 !important;
+    color: aliceblue !important;
+  }
+  #row1
+  {
+    margin-top: 120px !important;
+    margin-bottom: 40px;
+  }
