--- a/MyApp/src/app/component/home1/home1.component.html
+++ b/MyApp/src/app/component/home1/home1.component.html
@@ -3,96 +3,57 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Admin Home</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle"  id="dropdown04" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">Customer</a>
-                        <div class="dropdown-menu" aria-labelledby="dropdown04">
-                            <a class="dropdown-item" >Create Customer</a>
-                            <a class="dropdown-item" >Customer Details</a>
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle"  id="dropdown04" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">Service Engineer</a>
-                        <div class="dropdown-menu" aria-labelledby="dropdown04">
-                            <a class="dropdown-item" >Create Service Engineer</a>
-                            <a class="dropdown-item" >Service Engineer Details</a>
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="dropdown04" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false" >
-                           Complaints</a>
-                        <div class="dropdown-menu" aria-labelledby="dropdown04">
-                            <a class="dropdown-item" >Assign Complaints</a>
-                            <a class="dropdown-item" >View Complaints</a>
-                        </div>
-                    </li>
+            <div class="row">
+                <a class="navbar-brand" href="#"><i class="fas fa-users-cog"></i>Admin Home</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                    aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" id="dropdown04" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false"><i class="fas fa-user-edit"></i>Customer</a>
+                            <div class="dropdown-menu" aria-labelledby="dropdown04">
+                                <a class="dropdown-item">Create Customer</a>
+                                <a class="dropdown-item">Customer Details</a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" id="dropdown04" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false"><i class="fas fa-user-friends"></i>Service
+                                Engineer</a>
+                            <div class="dropdown-menu" aria-labelledby="dropdown04">
+                                <a class="dropdown-item">Create Service Engineer</a>
+                                <a class="dropdown-item">Service Engineer Details</a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" id="dropdown04" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false"><img src="assets\comp.png" alt="HTML5 Icon">
+                                Complaints</a>
+                            <div class="dropdown-menu" aria-labelledby="dropdown04">
+                                <a class="dropdown-item">Assign Complaints</a>
+                                <a class="dropdown-item">View Complaints</a>
+                            </div>
+                        </li>
 
-                </ul>
+                    </ul>
+                </div>
             </div>
         </div>
+
     </nav>
     <!--code extra-->
-    <div class="container">
-
-        <div class="row">
-
-            <!-- Blog Entries Column -->
-            <div class="col-md-8">
-
-                <h1 class="my-4">Page Heading
-                    <small>Secondary Text</small>
-                </h1>
-
-                <!-- Blog Post -->
-                <div class="card mb-4">
-                    <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
-                    <div class="card-body">
-                        <h2 class="card-title">Post Title</h2>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
-                            aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi
-                            vero voluptate voluptatibus possimus, veniam magni quis!</p>
-                        <a href="#" class="btn btn-primary">Read More &rarr;</a>
-                    </div>
-                    <div class="card-footer text-muted">
-                        Posted on January 1, 2017 by
-                        <a href="#">Start Bootstrap</a>
-                    </div>
-                </div>
+    <div class="row" id="row1">
+        <div class="col-md-4">
+            <div id="barchart2">
+                <canvas id="piechart" width="50" height="30"></canvas>
             </div>
-            <div class="col-md-4">
-                <div class="card my-4">
-                    <h5 class="card-header">Search</h5>
-                    <div class="card-body">
-                        <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Search for...">
-                            <span class="input-group-btn">
-                                <button class="btn btn-secondary" type="button">Go!</button>
-                            </span>
-                        </div>
-                    </div>
-                </div>
-                <div class="card mb-4">
-                    <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
-                    <div class="card-body">
-                      <h2 class="card-title">Post Title</h2>
-                      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-                      <a href="#" class="btn btn-primary">Read More &rarr;</a>
-                    </div>
-                    <div class="card-footer text-muted">
-                      Posted on January 1, 2017 by
-                      <a href="#">Start Bootstrap</a>
-                    </div>
-                  </div>
-        
+        </div>
+        <div class="col-md-4">
+            <div id="barchart2">
+                <canvas id="piechart" width="50" height="30"></canvas>
             </div>
         </div>
 
