--- a/MyApp/src/app/component/home1/home1.component.html
+++ b/MyApp/src/app/component/home1/home1.component.html
@@ -2,13 +2,31 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Admin Home</a>                
+            <a class="navbar-brand" href="#">Admin Home</a>
         </div>
     </nav>
-     
-    <div id="barchart2">
-         <canvas id="piechart" width="50" height="50"></canvas>
-     </div>            
+    
+        <div id="barchart2">
+            <canvas id="piechart" width="50" height="50"></canvas>
+            <p id="p1"><b>Pie Chart Demo 1</b></p>
+        </div>
+        <div id="barchart2">
+            <canvas id="piechart2" width="50" height="50"></canvas>
+            <p id="p1"><b>BarChart Demo 2</b></p>
+        </div>
+
+        <div id="piechart12">
+            <canvas id="piechart3" width="50" height="50"></canvas>
+            <p id="p1"><b>Pie Chart Demo 3</b></p>
+            </div>
+        
+        <div id="piechart12">
+            <canvas id="piechart4" width="50" height="50"></canvas>
+            <p id="p1"><b>Pie Chart Demo 4</b></p>
+        </div>
+
+
+    
 
     <!-- Footer -->
     <footer class="py-5 bg-dark" class="navbar navbar-expand-sm navbar-dark bg-dark fixed-bottom">
