--- a/MyApp/src/app/app.component.html
+++ b/MyApp/src/app/app.component.html
@@ -1,4 +1,3 @@
- <!-- <app-login></app-login> -->
-<!-- <app-home1></app-home1>  
+ <!-- <app-login></app-login> 
 <router-outlet></router-outlet>-->
-<app-service-engineer></app-service-engineer>
+<app-home1></app-home1>  
