--- a/MyApp/src/app/component/customer-reg/customer-reg.component.html
+++ b/MyApp/src/app/component/customer-reg/customer-reg.component.html
@@ -111,8 +111,7 @@
                             <label>Date Of Purchased<p class="p12">*</p></label>
                             <input type="date" class="form-control" formControlName="Datepurchased"
                                 placeholder="Choose a date"
-                                minlength="10"
-                                maxlength="10"
+                                [max]="dateValid"
                                 [ngClass]="{ 'is-invalid': submitted && f.Datepurchased.errors }">
                                 
                             </div>
@@ -124,9 +123,6 @@
                                 </div>
                             </ng-container>
                         </div>
-
-
-
 
                         <div class="form-group">
                             <label>Password<p class="p12">*</p></label>
@@ -152,10 +148,11 @@
                                 [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }">
                         </div>
                         <div class="validation-errors">
+                            <div *ngIf="!alert" class="alert alert-warning"><strong>Warning! </strong>Passwords must match</div>    
                             <ng-container *ngFor="let validation of validation_messages.confirmPassword">
                                 <div class="error-message text-danger"
                                     *ngIf="formGroup.get('confirmPassword').hasError(validation.type) && (formGroup.get('confirmPassword').dirty || formGroup.get('confirmPassword').touched)">
-                                    <div *ngIf="alert" class="alert alert-warning"><strong>Warning!</strong>Passwords must match</div>    
+                                   
                                     <!-- <div class="error-msg" *ngIf="f.errors?.passwordNotMatch && (f.controls['confirmPassword'].required || f.controls['confirmPassword'].touched)">
                                         Passwords don't match </div>                                     -->
                                     <span name="information-circle-outline"></span> {{ validation.message }}
