--- a/MyApp/src/app/component/home1/home1.component.html
+++ b/MyApp/src/app/component/home1/home1.component.html
@@ -1,18 +1,12 @@
-<body>
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
-        <div class="row">
 
-                <div class="col-md-2">
-                    <a class="navbar-brand" ><i class="fas fa-home"></i>Admin Home</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
-                        aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="oi oi-menu"></span>
-                    </button>
-                </div>
-                <div class="col-md-6">
-                    <div class="collapse navbar-collapse" id="ftco-nav">
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top row">
+    
+                <div class="col-md-8 ">
+                    <div class="collapse navbar-collapse float-left" id="ftco-nav">
                         <ul class="navbar-nav ml-auto">
+                            <li><a class="navbar-brand btn" ><i class="fas fa-home"></i></a>
+                            </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown"
                                     aria-haspopup="true" aria-expanded="false"><i class="fas fa-users"></i>Customer</a>
@@ -60,9 +54,7 @@
                    
                 </div>
            
-        </div>
-       
-
+             
 </nav>
 
     <div id="barchart2">
@@ -84,12 +76,10 @@
         <p id="p1"><b>Pie Chart Demo 4</b></p>
     </div>
 
-
-
-
     <footer class="py-5 bg-dark">
         <div class="container">
             <p class="m-0 text-center text-white">Copyright &copy; Your Website 2017</p>
         </div>
     </footer>
-</body>
+
+    
