--- a/MyApp/src/app/component/customer-reg/customer-reg.component.css
+++ b/MyApp/src/app/component/customer-reg/customer-reg.component.css
@@ -1,3 +1,6 @@
+
+@import url("https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
+
 h3{
     text-align: center;
 }
@@ -14,7 +17,6 @@ label{
     color: red;
 }
 
-
 .error-message{
     color: red
 }
@@ -22,3 +24,4 @@ input.ng-touched.ng-invalid {
     border: 1px solid red;
     
   }
+ 
