--- a/MyApp/src/app/component/customer-reg/customer-reg.component.html
+++ b/MyApp/src/app/component/customer-reg/customer-reg.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+    <div class="container">
     <div class="row">
         <div class="col-md-8 mx-auto">
             <div class="card">
@@ -26,7 +26,6 @@
                             <label>Mobile Number<p class="p12">*</p></label>
                             <input type="text" class="form-control" formControlName="Mobilenumber"
                                 placeholder="Enter Mobile Number"
-                                
                                 [ngClass]="{ 'is-invalid': submitted && f.Mobilenumber.errors }">
                         </div>
                         <div class="validation-errors">
@@ -90,9 +89,9 @@
                             <select class="custom-select" (change)="changeMachine($event)"
                                 formControlName="Machine_purchase">
                                 <option value="">Choose your Machine</option>
-                                <option *ngFor="let machine of Machine" [ngValue]="Machine">{{machine}}</option> 
-                            </select>                           
-                            
+                                <option *ngFor="let machine of Machine" [ngValue]="Machine">{{machine}}</option>
+                            </select>
+
                             <div class="validation-errors">
                                 <ng-container *ngFor="let validation of validation_messages.Machine_purchase">
                                     <div class="error-message text-danger"
@@ -101,20 +100,15 @@
                                     </div>
                                 </ng-container>
                             </div>
-    
-                            <!-- <div class="invalid-feedback" *ngIf="submitted && Machine_purchase.errors?.required">
-                                    <sup>*</sup>Please select your Machine name
-                         </div>     -->
                         </div>
 
                         <div class="form-group">
                             <label>Date Of Purchased<p class="p12">*</p></label>
-                            <input type="date" class="form-control" formControlName="Datepurchased"
-                                placeholder="Choose a date"
-                                [max]="dateValid"
-                                [ngClass]="{ 'is-invalid': submitted && f.Datepurchased.errors }">
-                                
-                            </div>
+                            <input type="text" class="form-control" formControlName="Datepurchased"
+                                placeholder="Choose a date" bsDatepicker [bsConfig]="{ isAnimated: true }"
+                                [maxDate]="maxDate" [ngClass]="{ 'is-invalid': submitted && f.Datepurchased.errors }">
+                                <!-- <i class="fa fa-calendar"></i> -->
+                        </div>
                         <div class="validation-errors">
                             <ng-container *ngFor="let validation of validation_messages.Datepurchased">
                                 <div class="error-message text-danger"
@@ -141,27 +135,27 @@
 
 
 
-                        <div class="form-group">
-                            <label>Confirm Password<p class="p12">*</p></label>
+                        <div class="form-group has-success has-feedback">
+                            <label class="control-label">Confirm Password<p class="p12">*</p></label>
                             <input type="password" class="form-control" formControlName="confirmPassword"
                                 placeholder="ConfirmPassword"
                                 [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }">
                         </div>
                         <div class="validation-errors">
-                            <div *ngIf="!alert" class="alert alert-warning"><strong>Warning! </strong>Passwords must match</div>    
+                            <div *ngIf="!alert" class="alert alert-warning"><strong>Warning! </strong>Passwords must
+                                match</div>
                             <ng-container *ngFor="let validation of validation_messages.confirmPassword">
                                 <div class="error-message text-danger"
                                     *ngIf="formGroup.get('confirmPassword').hasError(validation.type) && (formGroup.get('confirmPassword').dirty || formGroup.get('confirmPassword').touched)">
-                                   
-                                    <!-- <div class="error-msg" *ngIf="f.errors?.passwordNotMatch && (f.controls['confirmPassword'].required || f.controls['confirmPassword'].touched)">
-                                        Passwords don't match </div>                                     -->
                                     <span name="information-circle-outline"></span> {{ validation.message }}
                                 </div>
                             </ng-container>
                         </div>
-                    
+
                         <div class="form-group">
-                            <button type="submit" class="btn btn-primary" [disabled]="!formGroup.valid">
+                            <button type="submit" [disabled]="loading" class="btn btn-primary"
+                                [disabled]="!formGroup.valid">
+                                <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                                 Register
                             </button>
                             <button type="reset" class="btn btn-secondary " style="float:right;margin-top: 5px;">
