--- a/MyApp/src/app/component/customer-reg/customer-reg.component.html
+++ b/MyApp/src/app/component/customer-reg/customer-reg.component.html
@@ -105,7 +105,7 @@
                         <div class="form-group">
                             <label>Date Of Purchased<p class="p12">*</p></label>
                             <input type="text" class="form-control" formControlName="Datepurchased"
-                                placeholder="Choose a date" bsDatepicker [bsConfig]="{ isAnimated: true }"
+                                placeholder="MM/DD/YYYY" bsDatepicker [bsConfig]="{ isAnimated: true }"
                                 [maxDate]="maxDate" [ngClass]="{ 'is-invalid': submitted && f.Datepurchased.errors }">
                                 <!-- <i class="fa fa-calendar"></i> -->
                         </div>
@@ -150,6 +150,7 @@
                                     <span name="information-circle-outline"></span> {{ validation.message }}
                                 </div>
                             </ng-container>
+                            
                         </div>
 
                         <div class="form-group">
