--- a/MyApp/src/app/app.component.html
+++ b/MyApp/src/app/app.component.html
@@ -1,3 +1,3 @@
- <!-- <app-login></app-login> 
-<router-outlet></router-outlet>-->
-<app-home1></app-home1>  
+<!-- <app-login></app-login>--> 
+<!-- <app-home1></app-home1>   -->
+<router-outlet></router-outlet>
