--- a/MyApp/src/app/component/login/login.component.html
+++ b/MyApp/src/app/component/login/login.component.html
@@ -1,3 +1,6 @@
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
 <body class="bg">
   <div class="container">
 
@@ -25,13 +28,18 @@
           </div>
           <div class="form-group">
             <label for="exampleInputEmail1">Password :</label>
-            <div>
-              <input type="password" name="password" formControlName="password" class="form-control" id="password"
-                aria-describedby="passwordHelp" placeholder="Enter password">
+            <div class="input-group">
+              <input [type]="fieldTextType ? 'text':'password'" name="password" formControlName="password"
+                class="form-control" id="password" placeholder="Enter password"/>
+            <div class="input-group-prepend">
+                <span class="input-group-text">
+                  <i class="fa" [ngClass]="{'fa-eye-slash' : !fieldTextType,'fa-eye' : fieldTextType}" id="btn2"
+                    (click)="toggleFieldTextType()"></i>
+                </span>
+              </div>
             </div>
-
-
           </div>
+
           <div class="validation-errors">
             <ng-container *ngFor="let validation of validation_messages.password">
               <p class="error-message text-danger"
