--- a/MyApp/src/app/component/home1/home1.component.html
+++ b/MyApp/src/app/component/home1/home1.component.html
@@ -25,7 +25,7 @@
                             aria-haspopup="true" aria-expanded="false"><i class="fas fa-users-cog"></i>Service
                             Engineer</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown04">
-                            <a class="dropdown-item" routerLink="/en" (click)="showEngineer()">Create Service Engineer</a>
+                            <a class="dropdown-item" (click)="showEngineer()">Create Service Engineer</a>
                             <a class="dropdown-item">Update Service Engineer</a>
                             <a class="dropdown-item">Service Engineer Details</a>
                         </div>
@@ -104,3 +104,4 @@
         </div>
     </footer>
 </body>
+
