--- a/MyApp/src/app/component/home1/home1.component.html
+++ b/MyApp/src/app/component/home1/home1.component.html
@@ -1,3 +1,4 @@
+
 <body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top row ">
@@ -8,14 +9,14 @@
             <div class="collapse navbar-collapse float-left" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                         <a class="navbar-brand" href="#"> <i class="fas fa-home"></i>Admin Home</a>
-                       
+                        <a class="navbar-brand" href="#"> <i class="fas fa-home"></i>Admin Home</a>
+
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false"><i class="fas fa-users"></i>Customer</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown04">
-                            <a class="dropdown-item">Create Customer</a>
+                            <a class="dropdown-item" routerLink="home1/createcustomer" routerLinkActive="Active">Create Customer</a>
                             <a class="dropdown-item">Update Customer</a>
                             <a class="dropdown-item">Customer Details</a>
                         </div>
@@ -25,7 +26,7 @@
                             aria-haspopup="true" aria-expanded="false"><i class="fas fa-users-cog"></i>Service
                             Engineer</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown04">
-                            <a class="dropdown-item" (click)="showEngineer()">Create Service Engineer</a>
+                            <a class="dropdown-item" routerLink="home1/createserviceEngineer" routerLinkActive="Active">Create Service Engineer</a>
                             <a class="dropdown-item">Update Service Engineer</a>
                             <a class="dropdown-item">Service Engineer Details</a>
                         </div>
@@ -53,8 +54,8 @@
                     <li class="nav-item">
                         <a href="#" class="notification">
                             <span>Notification</span>
-                            <i class="fas fa-bell">  <span class="badge">3</span></i>
-                          
+                            <i class="fas fa-bell"> <span class="badge">3</span></i>
+
                         </a>
                     </li>
                     <li class="nav-item">
@@ -70,9 +71,9 @@
 
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
-        aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="oi oi-menu"></span> <b>Menu</b>
-    </button>
+            aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="oi oi-menu"></span> <b>Menu</b>
+        </button>
 
     </nav>
 
@@ -104,4 +105,5 @@
         </div>
     </footer>
 </body>
+
 
