--- a/MyApp/src/app/component/home1/home1.component.html
+++ b/MyApp/src/app/component/home1/home1.component.html
@@ -73,31 +73,11 @@
         aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="oi oi-menu"></span> <b>Menu</b>
     </button>
-
+ 
     </nav>
-
-    <div id="barchart2">
-        <canvas id="piechart" width="50" height="50"></canvas>
-        <p id="p1"><b>Pie Chart Demo 1</b></p>
-    </div>
-    <div id="barchart2">
-        <canvas id="piechart2" width="50" height="50"></canvas>
-        <p id="p1"><b>BarChart Demo 2</b></p>
-    </div>
-
-    <div id="piechart12">
-        <canvas id="piechart3" width="50" height="50"></canvas>
-        <p id="p1"><b>Pie Chart Demo 3</b></p>
-    </div>
-
-    <div id="piechart12">
-        <canvas id="piechart4" width="50" height="50"></canvas>
-        <p id="p1"><b>Pie Chart Demo 4</b></p>
-    </div>
-
-
-
-
+    <div *ngIf="chart">
+        <canvas id="canvas">{{ chart }}</canvas>
+      </div>
     <footer class="py-5 bg-dark">
         <div class="container">
             <p class="m-0 text-center text-white">Copyright &copy; Your Website 2017</p>
