--- a/MyApp/src/app/component/customer-reg/customer-reg.component.css
+++ b/MyApp/src/app/component/customer-reg/customer-reg.component.css
@@ -24,4 +24,16 @@ input.ng-touched.ng-invalid {
     border: 1px solid red;
     
   }
- 
+ .card-header{
+     background-color:slateblue;
+ }
+ .btn{
+    background: #0066A2;
+    color: white;   
+    border-style: outset;    
+    border-color: #0066A2;    
+    height: 50px;    
+    width: 100px;    
+    font: bold 15px arial, sans-serif;    
+    text-shadow:none;
+ }
