--- a/MyApp/src/app/component/customer-reg/customer-reg.component.html
+++ b/MyApp/src/app/component/customer-reg/customer-reg.component.html
@@ -1,3 +1,8 @@
+
+<ngx-spinner [fullScreen]="true" type="ball-clip-rotate-multiple" size="medium">
+    <p class="loading">Loading Awesomeness...</p>
+</ngx-spinner>
+
 <div class="container">
     <div class="row">
         <div class="col-md-8 mx-auto">
@@ -168,20 +173,14 @@
                                     <span name="information-circle-outline"></span> {{ validation.message }}
                                 </div>
                             </ng-container>
-
                         </div>
-
                         <div class="form-group">
-                            <button type="submit" [disabled]="loading" class="btn btn-primary"
-                                [disabled]="!formGroup.valid">
-                                <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                            <button type="submit" class="btn btn-primary" [disabled]="!formGroup.valid">
                                 Register
                             </button>
                             <button type="reset" class="btn btn-secondary " style="float:right;margin-top: 5px;">
                                 Reset Form
                             </button>
-
-
                         </div>
                     </form>
                 </div>
