--- a/MyApp/src/app/component/home1/home1.component.html
+++ b/MyApp/src/app/component/home1/home1.component.html
@@ -1,4 +1,3 @@
-
 <body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top row ">
@@ -16,7 +15,7 @@
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false"><i class="fas fa-users"></i>Customer</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown04">
-                            <a class="dropdown-item" routerLink="home1/createcustomer" routerLinkActive="Active">Create Customer</a>
+                            <a class="dropdown-item" routerLink="home1/createcustomer" routerLinkActive="Active" (click)=" showCustomer()">Create Customer</a>
                             <a class="dropdown-item">Update Customer</a>
                             <a class="dropdown-item">Customer Details</a>
                         </div>
@@ -26,7 +25,7 @@
                             aria-haspopup="true" aria-expanded="false"><i class="fas fa-users-cog"></i>Service
                             Engineer</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown04">
-                            <a class="dropdown-item" routerLink="home1/createserviceEngineer" routerLinkActive="Active">Create Service Engineer</a>
+                            <a class="dropdown-item" routerLink="home1/createserviceEngineer" routerLinkActive="Active" (click)="showEngineer()">Create Service Engineer</a>
                             <a class="dropdown-item">Update Service Engineer</a>
                             <a class="dropdown-item">Service Engineer Details</a>
                         </div>
@@ -95,15 +94,13 @@
         <canvas id="piechart4" width="50" height="50"></canvas>
         <p id="p1"><b>Pie Chart Demo 4</b></p>
     </div>
-
-
-
-
     <footer class="py-5 bg-dark">
         <div class="container">
             <p class="m-0 text-center text-white">Copyright &copy; Your Website 2017</p>
         </div>
     </footer>
 </body>
+
+
 
 
