--- a/MyApp/src/app/component/login/login.component.html
+++ b/MyApp/src/app/component/login/login.component.html
@@ -1,11 +1,13 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
+<ngx-spinner [fullScreen]="true" type="ball-clip-rotate-multiple" size="medium">
+  <p class="loading">Loading Awesomeness...</p>
+</ngx-spinner>
 
 <body class="bg">
   <div class="container">
 
     <div class="d-flex justify-content-center">
-      <div class="main">
+        <div class="main">        
         <div class="d-flex justify-content-center">
           <img src="assets\Login.png" alt="HTML5 Icon">
         </div>
@@ -57,8 +59,8 @@
           </div>
 
           <div>
-            <button [disabled]="loading" class="btn btn-primary" type="submit" id="btn1" [disabled]="!formGroup.valid">
-              <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+            <button class="btn btn-primary" type="submit" id="btn1" [disabled]="!formGroup.valid">
+              <!-- <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span> -->
               <b>Login</b>
             </button>
           </div>
@@ -69,3 +71,4 @@
     </div>
   </div>
 </body>
+
