--- a/MyApp/src/app/component/service-engineer/service-engineer.component.html
+++ b/MyApp/src/app/component/service-engineer/service-engineer.component.html
@@ -1,6 +1,8 @@
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
+<ngx-spinner [fullScreen]="true" type="ball-clip-rotate-multiple" size="medium">
+    <p class="loading">Loading Awesomeness...</p>
+</ngx-spinner>
 
 <div class="container">
     <div class="row">
@@ -169,10 +171,8 @@
                         </div>
 
                         <div class="form-group">
-                            <button type="submit" [disabled]="loading" class="btn btn-primary"
-                                [disabled]="!formGroup.valid">
-                                <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-                                Register
+                            <button type="submit" class="btn btn-primary" [disabled]="!formGroup.valid">
+                              Register
                             </button>
                             <button type="reset" class="btn btn-secondary " style="float:right;margin-top: 5px;">
                                 Reset Form
