--- a/MyApp/src/app/component/customer-reg/customer-reg.component.css
+++ b/MyApp/src/app/component/customer-reg/customer-reg.component.css
@@ -25,7 +25,7 @@ input.ng-touched.ng-invalid {
     
   }
  .card-header{
-     background-color:slateblue;
+     background-color:seagreen;
  }
  .btn{
     background: #0066A2;
