--- a/MyApp/src/app/component/customer-reg/customer-reg.component.html
+++ b/MyApp/src/app/component/customer-reg/customer-reg.component.html
@@ -90,11 +90,9 @@
 
                         <div class="form-group">
                             <label>Machine Purchased<p class="p12">*</p></label>
-                            <!-- <input  class="custom-select" (change)="changeCity($event)" formControlName="Machine_purchase" placeholder="select Machine"> -->
-                            <select class="custom-select" (change)="changeMachine($event)"
-                                formControlName="Machine_purchase">
+                            <select  class="form-control" formControlName="Machine_purchase">
                                 <option value="">Choose your Machine</option>
-                                <option *ngFor="let machine of Machine" [ngValue]="Machine">{{machine}}</option>
+                                <option *ngFor="let machine of Machinelist;let i=index" value="{{machine.name}}" [selected]="i == 0">{{machine.name}} </option>
                             </select>
 
                             <div class="validation-errors">
@@ -112,7 +110,7 @@
                             <input type="text" class="form-control" formControlName="Datepurchased"
                                 placeholder="MM/DD/YYYY" bsDatepicker [bsConfig]="{ isAnimated: true }"
                                 [maxDate]="maxDate" [ngClass]="{ 'is-invalid': submitted && f.Datepurchased.errors }">
-                            <!-- <i class="fa fa-calendar"></i> -->
+                            
                         </div>
                         <div class="validation-errors">
                             <ng-container *ngFor="let validation of validation_messages.Datepurchased">
@@ -126,14 +124,14 @@
                         <div class="form-group">
                             <label>Password<p class="p12">*</p></label>
                             <div class="input-group">
-                                <input [type]="fieldTextType ? 'text':'password'" class="form-control"
+                                <input [type]="passwordfieldTextType ? 'text':'password'" class="form-control"
                                     formControlName="password" placeholder="Enter Your password"
                                     [ngClass]="{ 'is-invalid': submitted && f.password.errors }">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text">
                                         <i class="fa"
-                                            [ngClass]="{'fa-eye-slash' : !fieldTextType,'fa-eye' : fieldTextType}"
-                                            id="btn2" (click)="toggleFieldTextType()"></i>
+                                            [ngClass]="{'fa-eye-slash' : !passwordfieldTextType,'fa-eye' : passwordfieldTextType}"
+                                            id="btn11" (click)="toggleFieldTextType($event)"></i>
                                     </span>
                                 </div>
                             </div>
@@ -152,21 +150,20 @@
                         <div class="form-group has-success has-feedback">
                             <label class="control-label">Confirm Password<p class="p12">*</p></label>
                             <div class="input-group">
-                                <input [type]="fieldTextType ? 'text':'password'" class="form-control"
+                                <input [type]="confirmfieldTextType ? 'text':'password'" class="form-control"
                                     formControlName="confirmPassword" placeholder="ConfirmPassword"
-                                    [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }">
+                                    [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors ?.invalid }">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text">
                                         <i class="fa"
-                                            [ngClass]="{'fa-eye-slash' : !fieldTextType,'fa-eye' : fieldTextType}"
-                                            id="btn2" (click)="toggleFieldTextType()"></i>
+                                            [ngClass]="{'fa-eye-slash' : !confirmfieldTextType,'fa-eye' : confirmfieldTextType}"
+                                            id="btn12" (click)="toggleFieldTextType($event)"></i>
                                     </span>
                                 </div>
                             </div>
                         </div>
                         <div class="validation-errors">
-                            <div *ngIf="!alert" class="alert alert-warning"><strong>Warning! </strong>Passwords must
-                                match</div>
+                            <div *ngIf="!alert"  class="alert alert-warning"><strong>Warning! </strong>Passwords must match</div>
                             <ng-container *ngFor="let validation of validation_messages.confirmPassword">
                                 <div class="error-message text-danger"
                                     *ngIf="formGroup.get('confirmPassword').hasError(validation.type) && (formGroup.get('confirmPassword').dirty || formGroup.get('confirmPassword').touched)">
@@ -174,8 +171,25 @@
                                 </div>
                             </ng-container>
                         </div>
+                        <div  id="customerModal" class="modal fade" role="dialog">
+                            <div class="modal-dialog">
+                          
+                              <!-- Modal content-->
+                              <div class="modal-content">
+                                <div class="modal-header">
+                                  <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                  </div>
+                                <div class="modal-body" class="alert alert-success" *ngIf="showMsg">
+                                    <strong>Registration Successfully!</strong>
+                                </div>
+                                <div class="modal-footer">
+                                  <button type="button" class="btn btn-dark" data-dismiss="modal">Close</button>
+                                </div>
+                              </div>                        
+                            </div>
+                          </div>                    
                         <div class="form-group">
-                            <button type="submit" class="btn btn-primary" [disabled]="!formGroup.valid">
+                            <button type="submit" class="btn btn-primary" data-toggle="modal" data-target="#customerModal "[disabled]="!formGroup.valid">
                                 Register
                             </button>
                             <button type="reset" class="btn btn-secondary " style="float:right;margin-top: 5px;">
