--- a/MyApp/src/app/component/header/header.component.html
+++ b/MyApp/src/app/component/header/header.component.html
@@ -8,14 +8,14 @@
             <div class="collapse navbar-collapse float-left" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                         <a class="navbar-brand" href="#"> <i class="fas fa-home"></i>Admin Home</a>
+                         <a class="navbar-brand" routerLink="/home1"> <i class="fas fa-home"></i>Admin Home</a>
                        
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false"><i class="fas fa-users"></i>Customer</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown04">
-                            <a class="dropdown-item" routerLink="createcustomer" >Create Customer</a>
+                            <a class="dropdown-item" routerLink="createcustomer" (click)="customerReg()" >Create Customer</a>
                             <a class="dropdown-item">Update Customer</a>
                             <a class="dropdown-item">Customer Details</a>
                         </div>
@@ -25,7 +25,7 @@
                             aria-haspopup="true" aria-expanded="false"><i class="fas fa-users-cog"></i>Service
                             Engineer</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown04">
-                            <a class="dropdown-item" routerLink="createserviceEngineer">Create Service Engineer</a>
+                            <a class="dropdown-item" routerLink="createserviceEngineer" (click)="serviceEngg()">Create Service Engineer</a>
                             <a class="dropdown-item">Update Service Engineer</a>
                             <a class="dropdown-item">Service Engineer Details</a>
                         </div>
