--- a/MyApp/src/app/component/service-engineer/service-engineer.component.html
+++ b/MyApp/src/app/component/service-engineer/service-engineer.component.html
@@ -91,15 +91,15 @@
                         <div class="form-group">
                             <label>Engineer Type<p class="p12">*</p></label>
                             <!-- <input  class="custom-select" (change)="changeCity($event)" formControlName="Machine_purchase" placeholder="select Machine"> -->
-                            <select class="custom-select" (change)="changeEngineer($event)" formControlName="Engineer1">
+                            <select class="form-control"  formControlName="EngineerType">
                                 <option value="">Choose engg type</option>
-                                <option *ngFor="let engg of Engg" [ngValue]="Engg">{{engg}}</option>
+                                <option *ngFor="let engg of enggList; let i= index" value="{{engg.name}}" [selected]="i == 0">{{engg.name}}</option>
                             </select>
 
                             <div class="validation-errors">
-                                <ng-container *ngFor="let validation of validation_messages.Engineer1">
+                                <ng-container *ngFor="let validation of validation_messages.EngineerType">
                                     <div class="error-message text-danger"
-                                        *ngIf="formGroup.get('Engineer1').hasError(validation.type) && (formGroup.get('Engineer1').dirty || formGroup.get('Engineer1').touched)">
+                                        *ngIf="formGroup.get('EngineerType').hasError(validation.type) && (formGroup.get('EngineerType').dirty || formGroup.get('EngineerType').touched)">
                                         <span name="information-circle-outline"></span> {{ validation.message }}
                                     </div>
                                 </ng-container>
@@ -108,15 +108,15 @@
 
                         <div class="form-group">
                             <label>Date Of Joining<p class="p12">*</p></label>
-                            <input type="text" class="form-control" formControlName="Datepurchased"
+                            <input type="text" class="form-control" formControlName="DateOfjoining"
                                 placeholder="MM/DD/YYYY" bsDatepicker [bsConfig]="{ isAnimated: true }"
-                                [maxDate]="maxDate" [ngClass]="{ 'is-invalid': submitted && f.Datepurchased.errors }">
+                                [maxDate]="maxDate" [ngClass]="{ 'is-invalid': submitted && f.DateOfjoining.errors }">
                             <!-- <i class="fa fa-calendar"></i> -->
                         </div>
                         <div class="validation-errors">
-                            <ng-container *ngFor="let validation of validation_messages.Datepurchased">
+                            <ng-container *ngFor="let validation of validation_messages.DateOfjoining">
                                 <div class="error-message text-danger"
-                                    *ngIf="formGroup.get('Datepurchased').hasError(validation.type) && (formGroup.get('Datepurchased').dirty || formGroup.get('Datepurchased').touched)">
+                                    *ngIf="formGroup.get('DateOfjoining').hasError(validation.type) && (formGroup.get('DateOfjoining').dirty || formGroup.get('DateOfjoining').touched)">
                                     <span name="information-circle-outline"></span> {{ validation.message }}
                                 </div>
                             </ng-container>
@@ -150,7 +150,7 @@
                             <div class="input-group">
                                 <input [type]="confirmTextField ? 'text':'password'" class="form-control"
                                     formControlName="confirmPassword" placeholder="ConfirmPassword"
-                                    [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }" />
+                                    [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors ?.invalid }" />
 
                                 <div class="input-group-prepend">
                                     <span class="input-group-text">
@@ -170,11 +170,28 @@
                                     <span name="information-circle-outline"></span> {{ validation.message }}
                                 </div>
                             </ng-container>
-
                         </div>
 
+                        <div  id="serviceEnggModal" class="modal fade" role="dialog">
+                            <div class="modal-dialog">
+                          
+                              <!-- Modal content-->
+                              <div class="modal-content">
+                                <div class="modal-header">
+                                  <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                  </div>
+                                <div class="modal-body" class="alert alert-success" *ngIf="showMsg">
+                                    <strong>Registration Successfully!</strong>
+                                </div>
+                                <div class="modal-footer">
+                                  <button type="button" class="btn btn-dark" data-dismiss="modal">Close</button>
+                                </div>
+                              </div>                        
+                            </div>
+                          </div>                    
+
                         <div class="form-group">
-                            <button type="submit" class="btn btn-primary" [disabled]="!formGroup.valid">
+                            <button type="submit" class="btn btn-primary"  data-toggle="modal" data-target="#serviceEnggModal" [disabled]="!formGroup.valid">
                                 Register
                             </button>
                             <button type="reset" class="btn btn-secondary " style="float:right;margin-top: 5px;">
