--- a/MyApp/src/app/app.component.html
+++ b/MyApp/src/app/app.component.html
@@ -1,8 +1,9 @@
 
-<!--
+
 <router-outlet></router-outlet>
- <app-status-check
+<!-- <app-status-check
 [onlineStatusMessage]="connectionStatusMessage"
 [onlineStatus]="connectionStatus">
-</app-status-check> -->
+</app-status-check> 
 <app-chart></app-chart>
+-->
