--- a/MyApp/src/app/component/chart/chart.component.html
+++ b/MyApp/src/app/component/chart/chart.component.html
@@ -1,13 +1,10 @@
-<div>
-   <ul>
-      <li>UserCount: {{graphData.userCount}}</li>
-      <li>enggCount: {{graphData.enggCount}}</li>
-      <li>adminCount: {{graphData.adminCount}}</li>   
-   </ul>
-</div>
 
 
-<div *ngFor='let user of users' style="text-align: center;">
-   <h2>
-          {{user.u_name}}    </h2>
-</div>
+<div class="chart-container"  style="float: left; height:30vh; width:50vw;margin-top: 100px !important;">    
+   <canvas id="canvas"></canvas>    
+ </div>
+
+
+
+
+
