--- a/MyApp/src/app/component/customer-reg/customer-reg.component.html
+++ b/MyApp/src/app/component/customer-reg/customer-reg.component.html
@@ -8,7 +8,7 @@
         <div class="col-md-8 mx-auto">
             <div class="card">
                 <div class="card-header">
-                    <h3>Customer Registration </h3>
+                    <h3> Registration </h3>
                 </div>
                 <div class="card-body">
                     <form class="form" [formGroup]="formGroup" (ngSubmit)="onSubmit(fb)">
@@ -16,7 +16,7 @@
                         <div class="form-group">
                             <label>Name<p class="p12">*</p></label>
                             <input type="text" class="form-control" formControlName="name" placeholder="Enter Your Name"
-                                [ngClass]="{ 'is-invalid': submitted && f.name.errors }">
+                                [ngClass]="{ 'is-invalid': submitted && f.name.errors?.invalid }">
                         </div>
                         <div class="validation-errors">
                             <ng-container *ngFor="let validation of validation_messages.name">
@@ -30,8 +30,8 @@
                         <div class="form-group">
                             <label>Mobile Number<p class="p12">*</p></label>
                             <input type="text" class="form-control" formControlName="Mobilenumber"
-                                placeholder="Enter Mobile Number"
-                                [ngClass]="{ 'is-invalid': submitted && f.Mobilenumber.errors }">
+                                placeholder="Enter Your Mobile Number"
+                                [ngClass]="{ 'is-invalid': submitted && f.Mobilenumber.errors?.invalid }">
                         </div>
                         <div class="validation-errors">
                             <ng-container *ngFor="let validation of validation_messages.Mobilenumber">
@@ -45,8 +45,8 @@
                         <div class="form-group">
                             <label>Alternate Mobile Number</label>
                             <input type="text" class="form-control" formControlName="Alternatemobile"
-                                placeholder="Enter Alternate Mobile Number"
-                                [ngClass]="{ 'is-invalid': submitted && f.Alternatemobile.errors }">
+                                placeholder="Enter Your Alternate Mobile Number"
+                                [ngClass]="{ 'is-invalid': submitted && f.Alternatemobile.errors?.invalid }">
                         </div>
                         <div class="validation-errors">
                             <ng-container *ngFor="let validation of validation_messages.Alternatemobile">
@@ -61,7 +61,7 @@
                             <label>Email<p class="p12">*</p></label>
                             <input type="email" class="form-control" formControlName="email"
                                 placeholder="Enter Your Email"
-                                [ngClass]="{ 'is-invalid': submitted && f.email.errors }">
+                                [ngClass]="{ 'is-invalid': submitted && f.email.errors?.invalid }">
                         </div>
                         <div class="validation-errors">
                             <ng-container *ngFor="let validation of validation_messages.email">
@@ -75,9 +75,9 @@
 
                         <div class="form-group">
                             <label>Address<p class="p12">*</p></label>
-                            <input type="text" class="form-control" formControlName="Address"
-                                placeholder="Enter Alternate Mobile Number"
-                                [ngClass]="{ 'is-invalid': submitted && f.Address.errors }">
+                            <textarea class="form-control" formControlName="Address"
+                                placeholder="Enter Your Address"
+                                [ngClass]="{ 'is-invalid': submitted && f.Address.errors?.invalid }"></textarea>
                         </div>
                         <div class="validation-errors">
                             <ng-container *ngFor="let validation of validation_messages.Address">
@@ -90,7 +90,7 @@
 
                         <div class="form-group">
                             <label>Machine Purchased<p class="p12">*</p></label>
-                            <select  class="form-control" formControlName="Machine_purchase">
+                            <select  class="form-control" formControlName="Machine_purchase" placeholder="Choose Your Machine">
                                 <option value="">Choose your Machine</option>
                                 <option *ngFor="let machine of Machinelist;let i=index" value="{{machine.name}}" [selected]="i == 0">{{machine.name}} </option>
                             </select>
@@ -109,7 +109,7 @@
                             <label>Date Of Purchased<p class="p12">*</p></label>
                             <input type="text" class="form-control" formControlName="Datepurchased"
                                 placeholder="MM/DD/YYYY" bsDatepicker [bsConfig]="{ isAnimated: true }"
-                                [maxDate]="maxDate" [ngClass]="{ 'is-invalid': submitted && f.Datepurchased.errors }">
+                                [maxDate]="maxDate" [ngClass]="{ 'is-invalid': submitted && f.Datepurchased.errors?.invalid }">
                             
                         </div>
                         <div class="validation-errors">
@@ -126,7 +126,7 @@
                             <div class="input-group">
                                 <input [type]="passwordfieldTextType ? 'text':'password'" class="form-control"
                                     formControlName="password" placeholder="Enter Your password"
-                                    [ngClass]="{ 'is-invalid': submitted && f.password.errors }">
+                                    [ngClass]="{ 'is-invalid': submitted && f.password.errors?.invalid }">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text">
                                         <i class="fa"
@@ -179,8 +179,13 @@
                                 <div class="modal-header">
                                   <button type="button" class="close" data-dismiss="modal">&times;</button>
                                   </div>
-                                <div class="modal-body" class="alert alert-success" *ngIf="showMsg">
-                                    <strong>Registration Successfully!</strong>
+                                <div class="modal-body">
+                                    <div class="alert alert-success fade show" *ngIf="showSuccessMsg">
+                                    <strong>Success!</strong>Registration Successfully.
+                                    </div>
+                                    <div class="alert alert-danger fade show" *ngIf="showInvalidMsg">
+                                     <strong>Error!</strong>The email address or phone number you have entered is already registered!       
+                                    </div>
                                 </div>
                                 <div class="modal-footer">
                                   <button type="button" class="btn btn-dark" data-dismiss="modal">Close</button>
@@ -189,11 +194,11 @@
                             </div>
                           </div>                    
                         <div class="form-group">
-                            <button type="submit" class="btn btn-primary" data-toggle="modal" data-target="#customerModal "[disabled]="!formGroup.valid">
+                            <button type="submit" class="btn btn-primary" id="RegisterButton" data-toggle="modal" data-target="#customerModal "[disabled]="!formGroup.valid">
                                 Register
                             </button>
-                            <button type="reset" class="btn btn-secondary " style="float:right;margin-top: 5px;">
-                                Reset Form
+                            <button type="reset" class="btn btn-secondary" id="ResetForm">
+                                ResetForm
                             </button>
                         </div>
                     </form>
