--- a/MyApp/src/app/component/header/header.component.html
+++ b/MyApp/src/app/component/header/header.component.html
@@ -1,21 +1,23 @@
+
+<ngx-spinner [fullScreen]="true" type="ball-clip-rotate-multiple" size="medium">
+    <p class="loading">Loading Awesomeness...</p>
+</ngx-spinner>
+
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top row ">
-
-
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top row " id="topheader">
         <div class="col-md-8">
 
             <div class="collapse navbar-collapse float-left" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                         <a class="navbar-brand" routerLink="/home1"> <i class="fas fa-home"></i>Admin Home</a>
-                       
+                         <a class="navbar-brand" routerLink="/home1"(click)="showButton(2)" [class.phase-active]="activeButton === 2" > <i class="fas fa-home"></i>Admin Home</a>                       
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown"
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" 
                             aria-haspopup="true" aria-expanded="false"><i class="fas fa-users"></i>Customer</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown04">
-                            <a class="dropdown-item" routerLink="createcustomer" (click)="customerReg()" >Create Customer</a>
+                            <a class="dropdown-item" routerLink="createcustomer"  (click)="createCustomer()" >Create Customer</a>
                             <a class="dropdown-item">Update Customer</a>
                             <a class="dropdown-item">Customer Details</a>
                         </div>
@@ -25,7 +27,7 @@
                             aria-haspopup="true" aria-expanded="false"><i class="fas fa-users-cog"></i>Service
                             Engineer</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown04">
-                            <a class="dropdown-item" routerLink="createserviceEngineer" (click)="serviceEngg()">Create Service Engineer</a>
+                            <a class="dropdown-item" routerLink="createserviceEngineer" routerLinkActive="active"  [routerLinkActiveOptions]="{ exact: true }" (click)="serviceEngg()">Create Service Engineer</a>
                             <a class="dropdown-item">Update Service Engineer</a>
                             <a class="dropdown-item">Service Engineer Details</a>
                         </div>
