--- a/MyApp/src/app/component/service-engineer/service-engineer.component.css
+++ b/MyApp/src/app/component/service-engineer/service-engineer.component.css
@@ -10,10 +10,35 @@ h3{
 label{
     font-weight: bold;
     display: inline-block;
-
 }
+input.ng-touched.ng-invalid {
+    border: 1px solid red;   
+  }
+
+select.ng-touched.ng-invalid {
+    border: 1px solid red;   
+  }
+  textarea.ng-touched.ng-invalid {
+    border: 1px solid red;   
+  }
 .p12{
     display: inline-block;
     color: red;
 }
- 
+ .loading{
+     color: white;
+ }
+
+ #Registerbutton{
+    float:right;
+    margin-top: 5px;
+    margin: 20px;
+    width: 30%;
+ }
+ #ResetButton{
+    float:right;
+    margin-top: 5px;
+    margin: 20px;
+    width: 30%;
+     
+ }
