--- a/MyApp/src/app/component/chart/chart.component.html
+++ b/MyApp/src/app/component/chart/chart.component.html
@@ -5,6 +5,9 @@
  </div>
 
 
-
+ <div *ngFor='let user of users' style="text-align: center;">
+  <h2>
+         {{user.u_joinDate}}    </h2>
+</div>
 
 
