--- a/MyApp/src/app/component/header/header.component.html
+++ b/MyApp/src/app/component/header/header.component.html
@@ -18,7 +18,7 @@
                             aria-haspopup="true" aria-expanded="false"><i class="fas fa-users"></i>Customer</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown04">
                             <a class="dropdown-item" routerLink="createcustomer"  (click)="createCustomer()" >Create Customer</a>
-                            <a class="dropdown-item">Update Customer</a>
+                            <a class="dropdown-item" routerLink="updatecustomer">Update Customer</a>
                             <a class="dropdown-item" routerLink="customerdetail">Customer Details</a>
                         </div>
                     </li>
@@ -28,8 +28,8 @@
                             Engineer</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown04">
                             <a class="dropdown-item" routerLink="createserviceEngineer" routerLinkActive="active"  [routerLinkActiveOptions]="{ exact: true }" (click)="serviceEngg()">Create Service Engineer</a>
-                            <a class="dropdown-item">Update Service Engineer</a>
-                            <a class="dropdown-item">Service Engineer Details</a>
+                            <a class="dropdown-item" routerLink="updateserviceEngineer">Update Service Engineer</a>
+                            <a class="dropdown-item" routerLink="serviceEnggDetails">Service Engineer Details</a>
                         </div>
                     </li>
 
