--- a/MyApp/src/app/app.component.html
+++ b/MyApp/src/app/app.component.html
@@ -4,5 +4,6 @@
 <app-status-check
 [onlineStatusMessage]="connectionStatusMessage"
 [onlineStatus]="connectionStatus">
-</app-status-check> -->
+</app-status-check> 
 <app-chart></app-chart>
+--><app-assign-complaint></app-assign-complaint>
