--- a/MyApp/src/app/component/CUSTOMERS/customer-list/customer-list.component.html
+++ b/MyApp/src/app/component/CUSTOMERS/customer-list/customer-list.component.html
@@ -29,7 +29,8 @@
           </td>
         </tr>
       </tbody>
-    </table>
-   
+    </table> 
     <!-- <button type="button" class="btn btn-success" [routerLink]="[ '/create']">Add Student</button> -->
   </div>
+
+  <router-outlet></router-outlet>
